# cxml_py

./: .cursorignore  .gitignore  LICENSE  README.md  optuna-monitor.py  pyproject.toml  start_server.py
.github/workflows/: pyinstaller-build.yml
notebooks/: analysis.ipynb  classify_mol.ipynb  load_data.py  metadata.ipynb  ml_playground.ipynb  moleculeNet.ipynb  plot_clustering.ipynb  plot_distributions.ipynb  plot_results.ipynb  testing.ipynb  timescale.ipynb  timescale.py  umap-notebook.ipynb  umap-results.ipynb  umda_viz.py  utils.py
scripts/: cxml-build.js  umdapy-build.js  umdapy.spec
src/: hook-main.py  main.py
src/cxml_lib/: __template.py  getVersion.py  start_redis_worker.py  wait_timer.py  worker.py
src/cxml_lib/archives/: mol2vec.py
src/cxml_lib/dimensionality_reduction/: generate_reduced_embeddings.py
src/cxml_lib/load_file/: apply_filter_for_molecular_analysis.py  apply_filter_for_ydata.py  check_duplicates_on_x_column.py  make_index_and_save_file.py  molecular_analysis.py  read_data.py  y_data_distribution.py
src/cxml_lib/ml_training/: embedd_data.py  export_all_metrics.py  ml_model.py  ml_prediction.py  ml_prediction_analysis.py
src/cxml_lib/ml_training/ml_utils/: ml_plots.py  ml_types.py
src/cxml_lib/molecule_analysis/: generate_analysis.py  optimize_3d_structure.py
src/cxml_lib/server/: __init__.py
src/cxml_lib/server/flask/: __init__.py
src/cxml_lib/utils/: __init__.py  computation.py  json.py
src/cxml_lib/vectorize_molecules/: embedder.py  vectorizer.py
src/hooks/: hook-cxml_lib.dimensionality_reduction.py  hook-cxml_lib.load_file.py  hook-cxml_lib.ml_training.py  hook-cxml_lib.molecule_analysis.py  hook-cxml_lib.py  hook-cxml_lib.vectorize_molecules.py  hook-flask_socketio.py  hook-matplotlib.py  hook-pygsp.py  hook-rq_dashboard.py  hook-umdalib.dimensionality_reduction.py  hook-umdalib.embedder.py  hook-umdalib.load_file.py  hook-umdalib.ml_training.py  hook-umdalib.molecule_analysis.py  hook-umdalib.py  hook-umdalib.vectorize_molecules.py
src/umdalib/: __template.py  getVersion.py  logger.py  run_worker.py  start_redis_worker.py  wait_timer.py  websocket.py  worker.py
src/umdalib/dimensionality_reduction/: generate_reduced_embeddings.py
src/umdalib/embedder/: vectorize_molecules.py
src/umdalib/load_file/: apply_filter_for_molecular_analysis.py  apply_filter_for_ydata.py  check_duplicates_on_x_column.py  make_index_and_save_file.py  molecular_analysis.py  y_data_distribution.py
src/umdalib/ml_training/: embedd_data.py  export_all_metrics.py  ml_model.py  ml_prediction.py  ml_prediction_analysis.py
src/umdalib/ml_training/ml_utils/: models.py
src/umdalib/molecule_analysis/: optimize_3d_structure.py
src/umdalib/server/: __init__.py
src/umdalib/training/: apply_filter_for_molecular_analysis.py  check_duplicates_on_x_column.py  embedd_data.py  export_all_metrics.py  generate_reduced_embeddings.py  make_index_and_save_file.py  ml_model.py  ml_prediction.py  ml_prediction_analysis.py  mol2vec.py  molecular_analysis.py  molecular_analysis_single_mode.py  pca.py  read_data.py  umap.py  y_data_distribution.py
src/umdalib/utils/: __init__.py  computation.py  json.py  molecular_analyzer.py
src/umdalib/vectorize_molecules/: embedder.py  vectorizer.py
(+14 files in other folders)
